# ContentAwareImageCrop

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/src/: CMakeLists.txt  color_similarity.hpp  content_aware_image_crop.cpp  content_aware_image_crop.hpp  energy_mat.cpp  energy_mat.hpp  image_utility.cpp  image_utility.hpp  test.cpp  utilities.cpp
backend/src/base/: color.hpp  color_similarity.hpp  hsv.hpp  image.cpp  line.hpp  mat.cpp  mat.hpp  pos.hpp  rgb.hpp  vec2d.hpp  vec3.hpp
backend/src/private/: energy_mat.cpp  energy_mat.hpp  utilities.hpp
backend/src/public/: content_aware_image_crop.cpp  content_aware_image_crop.hpp
backend/src/public/base/: color.hpp  hsv.hpp  image.cpp  image.hpp
backend/test/: CMakeLists.txt  content_aware_image_crop.cpp  content_aware_image_crop.hpp  main.cpp
frontend/: CMakeLists.txt  main.cpp
frontend/src/: CMakeLists.txt  main.cpp
